--- a/invitacion.html
+++ b/invitacion.html
@@ -650,7 +650,7 @@ html,body{ height:100%; }
   position:relative;
   max-width:420px;
   margin:50px auto 30px;
-  padding-left:90px; /* espacio para el elefante */
+  padding-left:130px; /* espacio para el elefante */
 }
 
   
@@ -692,8 +692,32 @@ html,body{ height:100%; }
   display:none
 }
   }
+/* 🐘 Elefante FUERA del box (solo confirmación) */
+.confirmElephantOutside{
+  position:absolute;
+  left:0;
+  top:50%;
+  transform:translateY(-50%);
+  width:120px;
+  height:auto;
+  z-index:2;
+  pointer-events:none;
+}
 
-  
+/* En móvil: el elefante se pone arriba y no estorba */
+@media (max-width:420px){
+  .confirmWrapper{
+    padding-left:130;
+    text-align:center;
+  }
+  .confirmElephantOutside{
+    position:static;
+    transform:none;
+    margin:0 auto 10px;
+    width:140px;
+    display:block;
+  }
+}
 
 </style>
 </head>
@@ -769,7 +793,7 @@ html,body{ height:100%; }
 <section class="confirmWrapper">
 
   <!-- Elefante FUERA del box -->
-  <img src="img/elefante.png" alt="Elefante" class="confirmElephant">
+  <img src="img/elefante.png" alt="Elefante" class="confirmElephantOutside">
 
   <!-- Box transparente -->
   <div class="confirmBox">
