--- a/invitacion.html
+++ b/invitacion.html
@@ -6,6 +6,8 @@
 <title>Invitación · Baby Shower</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
+
 
 <style>
 *{ box-sizing:border-box; }
@@ -440,32 +442,8 @@ html,body{ height:100%; }
 }
 .mapBox iframe{ width:100%;height:100%;border:none; }
 
-.btnConfirmar{
-  display:inline-block;
-  padding:12px 24px;
-  background:#BFDDE6;
-  color:#6B4A2B;
-  border-radius:18px;
-  text-decoration:none;
-  box-shadow:inset 0 -3px 0 rgba(0,0,0,.12),
-             0 10px 22px rgba(2,20,40,.15);
-}
 
 
-
-.confirmTitle{
-  font-size: 20px;
-  font-weight: 900;
-  color: #6B4A2B;
-  margin: 0 0 6px;
-}
-
-.confirmDesc{
-  font-size: 13px;
-  line-height: 1.35;
-  color: rgba(31,41,55,.70);
-  margin: 0 0 12px;
-}
 
 .confirmBtn{
   display:flex;
@@ -532,20 +510,25 @@ html,body{ height:100%; }
 
   
 .confirmThanks{
-  margin-top: 14px;
-  font-weight: 900;
+  margin: 26px auto 0;
+  text-align: center;
+  font-family: 'Playfair Display', Georgia, serif;
+  font-size: 28px;
+  font-weight: 600;
+  letter-spacing: .5px;
   color: #6B4A2B;
-  line-height: 1.1;
-  align-items:center;
 }
 
 .confirmThanks span{
-  display: block;
-  margin-top: 4px;
-  font-weight: 700;
-  font-size: 12px;
-  color: rgba(31,41,55,.65);
+  display:block;
+  margin-top: 6px;
+  font-family: 'Poppins', system-ui, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: .3px;
+  color: rgba(31,41,55,.55);
 }
+
 
 
 
