--- a/invitacion.html
+++ b/invitacion.html
@@ -473,23 +473,25 @@ html,body{ height:100%; }
 .confirmBox{
   max-width:360px;
   margin:40px auto 20px;   /* ⬅️ AQUÍ lo mueves verticalmente */
-  padding:14px;
+  padding:20px 22px 22px;
+  border-radius:18px;
   text-align: center;
   background:
     linear-gradient(180deg,
-      rgba(255,255,255,.35),
-      rgba(220,240,250,.25)
+      rgba(255,255,255,.22),
+      rgba(220,240,250,.18)
     );
 
-  backdrop-filter: blur(14px);
-  -webkit-backdrop-filter: blur(14px);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
 
-  border-radius:26px;
-  border:1px solid rgba(255,255,255,.55);
+  border:1px solid rgba(255,255,255,.35);
 
   box-shadow:
-    0 20px 50px rgba(2,20,40,.15),
-    inset 0 1px 0 rgba(255,255,255,.7);
+    0 14px 36px rgba(2,20,40,.12),
+    inset 0 1px 0 rgba(255,255,255,.55);
+
+  text-align:center;
 }
 
   /* ícono Whatsapp */
