--- a/invitacion.html
+++ b/invitacion.html
@@ -6,8 +6,7 @@
 <title>Invitación · Baby Shower</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;600&display=swap" rel="stylesheet">
 
 <style>
 *{ box-sizing:border-box; }
@@ -514,8 +513,8 @@ html,body{ height:100%; }
 .confirmThanks{
   margin: 26px auto 0;
   text-align: center;
-  font-family: 'Playfair Display', Georgia, serif;
-  font-size: 28px;
+  font-family: 'Dancing Script', cursive;
+  font-size: 32px;
   font-weight: 600;
   letter-spacing: .5px;
   color: #6B4A2B;
