--- a/invitacion.html
+++ b/invitacion.html
@@ -727,7 +727,7 @@ html,body{ height:100%; }
 
 <div class="confirmThanks">
     Gracias<br>
-    <span>Por ser parte de este día especial</span>
+    <span>Por ser parte de este día especial<br><br><br><br></span>
   </div>
 
 <audio id="bgMusic" preload="auto" loop>
