--- a/invitacion.html
+++ b/invitacion.html
@@ -55,18 +55,7 @@ html,body{ height:100%; }
 }
 
   /* ✅ Mobile/Tablet: scroll dentro del “teléfono” */
-    @media (max-width: 900px){
-      body{ overflow:hidden; }
-      .wrap{ height:100vh; align-items:center; }
-      .phone{ height: calc(100vh - 24px); }
-      .page{
-        height:100%;
-        overflow-y:auto;
-        -webkit-overflow-scrolling:touch;
-      }
-    }
-
-/* ======================
+    /* ======================
    BOTÓN MÚSICA
 ====================== */
 .musicWrap{
@@ -598,6 +587,7 @@ html,body{ height:100%; }
     .phone{ height:calc(100vh - 24px); }
     .page{ height:100%; overflow-y:auto; -webkit-overflow-scrolling:touch; }
     .wrap{ align-items:flex-start; }
+    .content{padding-top: 34px; /* antes 18px */  }
   .page::before{
   display:none
 }
