--- a/invitacion.html
+++ b/invitacion.html
@@ -54,15 +54,7 @@ html,body{ height:100%; }
   padding:18px 16px 28px;
 }
 
-  /* ✅ Mobile/Tablet: scroll dentro del “teléfono” */
-    /* ======================
-   BOTÓN MÚSICA
-====================== */
-.musicWrap{
-  display:flex;
-  justify-content:center;
-  padding:6px 0 12px;
-}
+  
 /* Música */
     .musicWrap{ display:flex; justify-content:center; padding:6px 0 12px; }
     .musicBtn{
@@ -588,6 +580,7 @@ html,body{ height:100%; }
     .page{ height:100%; overflow-y:auto; -webkit-overflow-scrolling:touch; }
     .wrap{ align-items:flex-start; }
     .content{padding-top: 34px; /* antes 18px */  }
+    .musicWrap{ padding-top: 14px; }
   .page::before{
   display:none
 }
