--- a/invitacion.html
+++ b/invitacion.html
@@ -465,28 +465,27 @@ html,body{ height:100%; }
 
 
 .confirmBox{
-  max-width:360px;
-  margin:40px auto 20px;   /* ⬅️ AQUÍ lo mueves verticalmente */
   padding:20px 22px 22px;
-  border-radius:18px;
-  text-align: center;
+  border-radius:26px;
+  text-align:center;
+
+  /* 🌫️ Glass MUY transparente */
   background:
     linear-gradient(180deg,
-      rgba(255,255,255,.22),
-      rgba(220,240,250,.18)
+      rgba(255,255,255,.14),
+      rgba(220,240,250,.10)
     );
 
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
 
-  border:1px solid rgba(255,255,255,.35);
+  border:1px solid rgba(255,255,255,.25);
 
   box-shadow:
-    0 14px 36px rgba(2,20,40,.12),
-    inset 0 1px 0 rgba(255,255,255,.55);
-
-  text-align:center;
+    0 10px 26px rgba(2,20,40,.10),
+    inset 0 1px 0 rgba(255,255,255,.35);
 }
+
 
   /* ícono Whatsapp */
   .waIcon{
