--- a/invitacion.html
+++ b/invitacion.html
@@ -591,6 +591,7 @@ html,body{ height:100%; }
   display: block;
   flex: 0 0 auto;
   pointer-events: none;
+  margin-left: -20px;
 }
 
 /* En móvil: el elefante se pone arriba y no estorba */
@@ -603,6 +604,7 @@ html,body{ height:100%; }
 
   .confirmElephantOutside{
     width: 150px;
+    margin-left: -18px;
   }
 
   .confirmBox{
