--- a/invitacion.html
+++ b/invitacion.html
@@ -137,7 +137,7 @@ html,body{ height:100%; }
 .dateLineGrid{
   display:grid;
   grid-template-columns: 1fr auto 1fr;
-  align-items: baseline;
+  align-items: center; /* mantiene sábado y año centrados */
   column-gap: 12px;
   max-width: 320px;       /* controla “ancho” del bloque */
   margin: 0 auto;         /* centra el grid completo */
@@ -158,7 +158,7 @@ html,body{ height:100%; }
   font-size:56px;
   font-weight:900;
   line-height:1;
-  margin-bottom: 20px;
+  margin-top: 6px;
 }
 
 /* derecha */
