--- a/invitacion.html
+++ b/invitacion.html
@@ -499,7 +499,7 @@ html,body{ height:100%; }
   margin: 26px auto 0;
   text-align: center;
   font-family: 'Dancing Script', cursive;
-  font-size: 32px;
+  font-size: 38px;
   font-weight: 600;
   letter-spacing: .5px;
   color: #6B4A2B;
@@ -509,7 +509,7 @@ html,body{ height:100%; }
   display:block;
   margin-top: 6px;
   font-family: 'Poppins', system-ui, sans-serif;
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 400;
   letter-spacing: .3px;
   color: rgba(31,41,55,.55);
@@ -689,7 +689,7 @@ html,body{ height:100%; }
 
 <div class="confirmThanks">
     Gracias<br>
-    <span>Por ser parte de este día especial<br><br><br><br></span>
+    <span>Por ser parte de este día especial<br><br><br><br><br><br></span>
   </div>
 
 <audio id="bgMusic" preload="auto" loop>
