--- a/invitacion.html
+++ b/invitacion.html
@@ -348,9 +348,7 @@ html,body{ height:100%; }
 
   backdrop-filter: blur(12px);
   -webkit-backdrop-filter: blur(12px);
-
-  border:1px solid rgba(255,255,255,.55);
-
+  /*border:1px solid rgba(255,255,255,.55);*/
   box-shadow:
     0 18px 42px rgba(2,20,40,.20),
     inset 0 1px 0 rgba(255,255,255,.75);
@@ -466,7 +464,7 @@ html,body{ height:100%; }
 
 .confirmBox{
   padding:20px 22px 22px;
-  border-radius:26px;
+  border-radius:20px;
   text-align:center;
 
   /* 🌫️ Glass MUY transparente */
@@ -479,7 +477,7 @@ html,body{ height:100%; }
   backdrop-filter: blur(8px);
   -webkit-backdrop-filter: blur(8px);
 
-  border:1px solid rgba(255,255,255,.25);
+  /*border:1px solid rgba(255,255,255,.25);*/
 
   box-shadow:
     0 10px 26px rgba(2,20,40,.10),
