--- a/invitacion.html
+++ b/invitacion.html
@@ -525,7 +525,7 @@ html,body{ height:100%; }
   font-size:20px;
   font-weight:900;
   margin:0 0 6px;
-  color:#6B4A2B;
+  color:#1f3a5f;
 }
 
 .confirmDesc{
