--- a/invitacion.html
+++ b/invitacion.html
@@ -506,7 +506,7 @@ html,body{ height:100%; }
 .confirmThanks span{
   display:block;
   margin-top: 6px;
-  font-family: 'Poppins', system-ui, sans-serif;
+  font-family: Georgia, serif;
   font-size: 18px;
   font-weight: 400;
   letter-spacing: .3px;
