--- a/invitacion.html
+++ b/invitacion.html
@@ -449,7 +449,7 @@ html,body{ height:100%; }
 
   background: rgba(165,210,245,.6);
   border:1px solid rgba(31,41,55,.12);
-  color:#6B4A2B;
+  color:#1f3a5f;
 
   font-weight:800;
   font-size:13px;
