--- a/invitacion.html
+++ b/invitacion.html
@@ -421,7 +421,8 @@ html,body{ height:100%; }
   justify-content:center;
   gap:6px;
   margin:2px 0 6px;    /* ⬅️ compacto */
-  line-height:1.15;   /* ⬅️ clave */
+  line-height:1.15;
+  color: #1f3a5f;/* ⬅️ clave */
 }
 .mapBox{
   width:100%;
