--- a/invitacion.html
+++ b/invitacion.html
@@ -411,6 +411,10 @@ html,body{ height:100%; }
 
 
 .boxElefante > *{ position:relative; z-index:1; }
+.boxElefante p{
+  color: #1f3a5f;
+  opacity: .9;
+}
 
 /* ======================
    RECEPCIÓN
