--- a/invitacion.html
+++ b/invitacion.html
@@ -412,7 +412,7 @@ html,body{ height:100%; }
 
 .boxElefante > *{ position:relative; z-index:1; }
 .boxElefante p{
-  color: #1f3a5f;
+  color:rgba(31,41,55,.7);
   opacity: .9;
 }
 
